implemented user to save list of all saved notes

--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -9,7 +9,9 @@
     <div id="notesContainer"></div>
     <span><h1 id="title">Sticky Notes</h1></span>
     <button id="add-note">Add Note</button>
-    <div class="allNotesList"></div>
+    <button id="remove-all">Remove All Notes</button>
+    <span><h3 id="title">All Notes</h3></span>
+    <div id="allNotesList"></div>
     <script src="stickyNotes.js"></script>
   </body>
 </html>
