--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <title>Sticky Notes</title>
-    <link rel="stylesheet" href="stickyNotes.css" />
   </head>
+  <link rel="stylesheet" href="stickyNotes.css" />
 
   <body>
     <div id="notesContainer"></div>
-    <span><h1 id="title">Sticky Notes</h1></span>
+    <div class="note-heading">
+      <h1 class="title">Sticky Notes</h1>
+      <button id="openTabButton" class="allNoteBtn text-sm">All</button>
+    </div>
     <button id="add-note">Add Note</button>
     <button id="remove-all">Remove All Notes</button>
-    <span><h3 id="title">All Notes</h3></span>
+    <span><h3 class="title mt-3">All Notes</h3></span>
     <div id="allNotesList"></div>
+    <script src="../scripts/custom_script/localdb.js"></script>
     <script src="stickyNotes.js"></script>
   </body>
 </html>
