--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -9,8 +9,10 @@
   <link rel="stylesheet" href="../styles/index.css" />
   <body>
     <div class="w-100 bg-custom vh-100 d-flex flex-column stickNoteWrapper">
+      <!--  -->
       <div class="w-100 heading d-flex justify-content-between">
         <span>Sticky Notes</span>
+        <!-- page name and search bar -->
         <div>
           <form class="d-flex" role="search">
             <input
@@ -24,6 +26,8 @@
             </button>
           </form>
         </div>
+
+        <!-- images -->
         <div class="icons">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -71,16 +75,60 @@
           </svg>
         </div>
       </div>
+
+      <!-- main container  -->
       <div class="d-flex flex-grow-1">
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="staticBackdrop"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          aria-labelledby="staticBackdropLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                  Modal title
+                </h1>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">...</div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+                <button type="button" class="btn btn-primary">
+                  Understood
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- side bar  -->
         <div class="stickyNoteSideBar w-25 border-end border-top border-light">
           <h5>Notes</h5>
           <div class="list_notes">
             <div class="cards d-flex w-100"></div>
           </div>
         </div>
+        <!-- text area container -->
         <div class="contentContainer w-75 border-top border-light"></div>
       </div>
     </div>
+
     <script src="../scripts/custom_script/localdb.js"></script>
     <script src="../scripts/custom_script/tab.js"></script>
   </body>
