--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -12,7 +12,7 @@
       <button id="openTabButton" class="allNoteBtn text-sm">All</button>
     </div>
     <button id="add-note">Add Note</button>
-    <button id="remove-all">Remove All Notes</button>
+    <button id="remove-all">Hide All Note</button>
     <span><h3 class="title mt-3">All Notes</h3></span>
     <div id="allNotesList"></div>
     <script src="../scripts/custom_script/localdb.js"></script>
