Create  pagination for the extension popup ui

--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -15,6 +15,7 @@
     <button id="remove-all">Hide All Note</button>
     <span><h3 class="title mt-3">All Notes</h3></span>
     <div id="allNotesList"></div>
+    <div class="pagination"></div>
     <script src="../scripts/custom_script/localdb.js"></script>
     <script src="stickyNotes.js"></script>
   </body>
