--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -14,17 +14,13 @@
         <span>Sticky Notes</span>
         <!-- page name and search bar -->
         <div>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
+          <input
+            id="searchBox"
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
         </div>
 
         <!-- images -->
