Created grid view for stickyNotes

--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -62,7 +62,7 @@
             width="16"
             height="16"
             fill="currentColor"
-            class="bi bi-grid"
+            class="bi bi-grid grid"
             viewBox="0 0 16 16"
           >
             <path
@@ -121,7 +121,9 @@
           </div>
         </div>
         <!-- text area container -->
-        <div class="contentContainer w-75 border-top border-light"></div>
+        <div
+          class="contentContainer d-flex align-items-center flex-column w-75 border-top border-light"
+        ></div>
       </div>
     </div>
 
