Updated the grid view code and change search position

--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -12,16 +12,6 @@
       <!--  -->
       <div class="w-100 heading d-flex justify-content-between">
         <span>Sticky Notes</span>
-        <!-- page name and search bar -->
-        <div>
-          <input
-            id="searchBox"
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-        </div>
 
         <!-- images -->
         <div class="icons">
@@ -115,8 +105,15 @@
         </div>
         <!-- side bar  -->
         <div class="stickyNoteSideBar w-25 border-end border-top border-light">
-          <h5>Notes</h5>
-          <div class="list_notes">
+          <input
+            id="searchBox"
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+
+          <div class="list_notes mt-2">
             <div class="cards d-flex w-100"></div>
           </div>
         </div>
