Created color pallets with shared variable

--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -3,6 +3,7 @@
   <head>
     <title>Sticky Notes</title>
   </head>
+  <link rel="stylesheet" href="../styles/colorPalette.css" />
   <link rel="stylesheet" href="stickyNotes.css" />
 
   <body>
