--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StickyNotes</title>
   </head>
+  <link rel="stylesheet" href="../styles/colorPalette.css" />
   <link rel="stylesheet" href="../styles/bootstrap-lib/css/bootstrap.css" />
   <link rel="stylesheet" href="../styles/index.css" />
   <body>
@@ -113,7 +114,7 @@
             aria-label="Search"
           />
 
-          <div class="list_notes mt-2">
+          <div class="list_notes mt-3">
             <div class="cards d-flex w-100"></div>
           </div>
         </div>
