fix minior issue

--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -118,7 +118,7 @@
             <div class="cards d-flex w-100"></div>
           </div>
         </div>
-        <div id="sideBar" class="sideBarOpen">
+        <div id="sideBar" class="sideBar">
           <div class="open-position">
             <svg
               class="postion"
