--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -13,7 +13,7 @@
       <button id="openTabButton" class="allNoteBtn text-sm">All</button>
     </div>
     <button id="add-note">Add Note</button>
-    <button id="remove-all">Hide All Note</button>
+    <button id="hide-all">Hide All Note</button>
     <div class="noOfNotes">
       <h3 id="notesNumber" class="title mt-3"></h3>
       <button class="button">
