finished feedback version 2

--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -21,6 +21,7 @@
             width="16"
             height="16"
             fill="currentColor"
+            id="refresh"
             class="bi bi-arrow-clockwise"
             viewBox="0 0 16 16"
           >
