--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -8,7 +8,7 @@
   <body>
     <div id="notesContainer"></div>
     <div class="heading-color">
-      <h1 class="title">Sticky Notes</h1>
+      <h1 id="title" class="title">Sticky Notes</h1>
       <button id="openTabButton" class="allNoteBtn text-sm">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -75,6 +75,7 @@
     </div>
     <div id="allNotesList"></div>
     <div class="pagination"></div>
+    <script src="../scripts/custom_script/localizedText.js"></script>
     <script src="../scripts/custom_script/localdb.js"></script>
     <script src="stickyNotes.js"></script>
   </body>
