--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -144,6 +144,7 @@
       </div>
     </div>
 
+    <script src="../scripts/custom_script/localizedText.js"></script>
     <script src="../scripts/custom_script/localdb.js"></script>
     <script src="../scripts/custom_script/tab.js"></script>
   </body>
