--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -28,7 +28,7 @@
       </button>
       <div id="settingsMenu" class="dropdown-content">
         <a href="#" id="seeAllNotes">See All Notes</a>
-        <a href="#" id="setLanguage">Set Language: English</a>
+        <!-- <a href="#" id="setLanguage">Set Language: English</a> -->
         <a href="#" state="false" id="unPinAll">UnPin All</a>
       </div>
     </div>
