implemented feedback-ro-3 changes

--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -145,6 +145,9 @@
     </div>
 
     <script src="../scripts/custom_script/localizedText.js"></script>
+    <script src="../scripts/custom_script/popper.min.js"></script>
+    <script src="../scripts/custom_script/tippy.min.js"></script>
+    <script src="../scripts/custom_script/tooltip.js"></script>
     <script src="../scripts/custom_script/localdb.js"></script>
     <script src="../scripts/custom_script/tab.js"></script>
   </body>
