--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -36,7 +36,7 @@
     <button id="add-note">Add Note</button>
     <!-- <button id="hide-all">Hide All Note</button> -->
     <div class="noOfNotes">
-      <h3 id="notesNumber" class="title mt-3">All Notes</h3>
+      <h3 id="notesNumber" class="title mt-3">No Notes Saved</h3>
 
       <!-- div for icons  -->
       <div>
@@ -75,8 +75,11 @@
     </div>
     <div id="allNotesList"></div>
     <div class="pagination"></div>
+    <script src="../scripts/custom_script/popper.min.js"></script>
+    <script src="../scripts/custom_script/tippy.min.js"></script>
     <script src="../scripts/custom_script/localizedText.js"></script>
     <script src="../scripts/custom_script/localdb.js"></script>
     <script src="stickyNotes.js"></script>
+    <script src="../scripts/custom_script/tooltip.js"></script>
   </body>
 </html>
