minior changes in the theme

--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -107,7 +107,7 @@
           </div>
         </div>
         <!-- side bar  -->
-        <div class="stickyNoteSideBar w-25 border-end border-top border-light">
+        <div class="stickyNoteSideBar w-25 border-end border-top border-dark">
           <input
             id="searchBox"
             class="form-control me-2"
@@ -139,7 +139,7 @@
         </div>
         <!-- text area container -->
         <div
-          class="contentContainer d-flex align-items-center flex-column w-100 border-top border-light"
+          class="contentContainer d-flex align-items-center flex-column w-100 border-top border-dark"
         ></div>
       </div>
     </div>
