Updated the extension name

--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -12,7 +12,7 @@
     <div class="w-100 bg-custom vh-100 d-flex flex-column stickNoteWrapper">
       <!--  -->
       <div class="w-100 heading d-flex justify-content-between">
-        <span>Sticky Notes</span>
+        <span>Stick it - web notes</span>
 
         <!-- images -->
         <div class="icons">
