--- a/stickyNotes/stickyNotes.html
+++ b/stickyNotes/stickyNotes.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sticky Notes</title>
+    <title>Stick it - web notes</title>
     <link rel="stylesheet" href="../styles/colorPalette.css" />
     <link rel="stylesheet" href="stickyNotes.css" />
   </head>
   <body>
     <div id="notesContainer"></div>
     <div class="heading-color">
-      <h1 id="title" class="title">Sticky Notes</h1>
+      <h1 id="title" class="title">Stick it - web notes</h1>
       <button id="openTabButton" class="allNoteBtn text-sm">
         <svg
           xmlns="http://www.w3.org/2000/svg"
