--- a/stickyNote_html_page/error.html
+++ b/stickyNote_html_page/error.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div style="padding: 10px; display: flex; width: 20rem">
-      <strong>Sticky Notes</strong> : cannot be used on this website.
+      <strong>Stick it - web notes</strong> : cannot be used on this website.
     </div>
   </body>
 </html>
