--- a/stickyNote_html_page/index.html
+++ b/stickyNote_html_page/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StickyNotes</title>
+    <title>Stick it - web notes</title>
   </head>
   <link rel="stylesheet" href="../styles/colorPalette.css" />
   <link rel="stylesheet" href="../styles/bootstrap-lib/css/bootstrap.css" />
