added open all notes tab from error msg

--- a/stickyNote_html_page/error.html
+++ b/stickyNote_html_page/error.html
@@ -9,5 +9,7 @@
     <div style="padding: 10px; display: flex; width: 20rem">
       <strong>Stick it - web notes</strong> : cannot be used on this website.
     </div>
+    <button id="seeAllNotes">Open Notes Tab</button>
   </body>
+  <script src="./error.js"></script>
 </html>
