add search and highlight functioanlity and fix the scroll bar issue

--- a/stickyNote_html_page/error.html
+++ b/stickyNote_html_page/error.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ERROR</title>
+    <link rel="stylesheet" href="../styles/colorPalette.css" />
+    <link rel="stylesheet" href="../styles/error.css" />
   </head>
   <body>
     <div style="padding: 10px; display: flex; width: 20rem">
       <strong>Stick it - web notes</strong> : cannot be used on this website.
     </div>
-    <button id="seeAllNotes">Open Notes Tab</button>
+    <button class="btn" id="seeAllNotes">Open Notes Tab</button>
   </body>
   <script src="./error.js"></script>
 </html>
